2014-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am, perl/Makefile.am: Fix build.

2014-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am (EXTRA_DIST): Add Amanda/Constants.pm.in.src

2014-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c (device_create): New function.
	* device-src/device.h (device_create): Add prototype.
	* device-src/s3-device.c (s3_device_create): New function.
	* perl/Amanda/Device.swg: Swig device_create.
	* perl/Amanda/Changer.pm (create): New method.
	* perl/Amanda/Changer/disk.pm (create): New create method.
	* perl/Amanda/Changer/multi.pm (create): New create method.
	* perl/Amanda/JSON/Changer.pm: Add create method.
	* perl/Amanda/Rest/Storages.pm (create): Add method to the Rest API.
	* perl/Amanda/Rest/Storages/Labels.pm: Remove debugging message.
	* perl/Amanda/Storage.pm: Add no_validate argument.
	* server-src/amtape.pl: Add create subcommand that call the changer
	  create method.
	* man/xml-source/amtape.8.xml: Document create subcommand.

2014-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: fix for /usr/bin/lsb_release

2014-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Do not uncompress/decrypt if server do not
	  have fe_amrecover_receive_unfiltered.

2014-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Fix distro.

2014-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: Fix check and installation of dancer module

2014-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c: Take root privilege to call get_fs_usage.

2014-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: Install Dancer generated file only.

2014-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am: Make perl/Amanda/Constants.pm.in from
				  perl/Amanda/Constants.pm.in.src